[package]
name = "neatworks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
bincode = "1.3.3"
blake2 = "0.10.6"
bytes = { version = "1.6.0", features = ["serde"] }
crossbeam-queue = "0.3.11"
derive-where = "1.2.7"
derive_more = "0.99.18"
primitive-types = { version = "0.12.2", features = ["serde"] }
rand = "0.8.5"
rustc-hash = "2.0.0"
scc = "2.1.2"
schnorrkel = { version = "0.11.4", features = ["serde"] }
secp256k1 = { version = "0.29.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["macros", "net", "rt", "signal", "sync", "time"] }

[dev-dependencies]
arbtest = "0.3.1"
tikv-jemallocator = "0.5.4"
