[package]
name = "boson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2", version = "0.2.0" }
tracing = "0.1.40"

[dev-dependencies]
itertools = "0.12.1"
log = "0.4.21"
plonky2_maybe_rayon = { git = "https://github.com/0xPolygonZero/plonky2" }
rand = "0.8.5"
rand_chacha = "0.3.1"
structopt = "0.3.26"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
