[package]
name = "boson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
plonky2 = { git = "https://github.com/sgdxbc/plonky2", version = "0.2.1" }
tracing = "0.1.40"
log = "0.4.21"
plonky2_u32 = { git = "https://github.com/sgdxbc/plonky2-u32", version = "0.1.0" }
plonky2_ecdsa = { git = "https://github.com/sgdxbc/plonky2-ecdsa", version = "0.1.0", features = ["parallel"] }

[dev-dependencies]
itertools = "0.12.1"
rand = "0.8.5"
structopt = "0.3.26"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
