[package]
name = "entropy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
augustus = { version = "0.1.0", path = "../.." }
axum = "0.7.4"
derive_more = "0.99.17"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt", "fs", "macros", "sync"] }
wirehair = { git = "https://github.com/sgdxbc/wirehair", version = "0.1.0" }
