[package]
name = "entropy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
augustus = { version = "0.1.0", path = "../.." }
axum = { version = "0.7.4", features = ["multipart"] }
bytes = "1.5.0"
derive_more = "0.99.17"
entropy-control-messages = { version = "0.1.0", path = "../../tools/entropy-control-messages" }
rand = "0.8.5"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "multipart"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt", "fs", "macros", "sync", "rt-multi-thread"] }
tokio-util = "0.7.10"
wirehair = { git = "https://github.com/sgdxbc/wirehair", version = "0.1.1" }
