[package]
name = "cover-control"
version = "0.1.0"
edition = "2021"
default-run = "cover-control"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
cover-control-messages = { version = "0.1.0", path = "../cover-control-messages" }
reqwest = { version = "0.12.3", default-features = false, features = ["json"] }
tokio = { version = "1.35.1", features = ["macros", "net", "time", "rt", "process", "fs", "io-util"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
rand = "0.8.5"
tokio-util = "0.7.10"
hdrhistogram = "7.5.4"
