[package]
name = "entropy-control"
version = "0.1.0"
edition = "2021"
default-run = "entropy-control"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
entropy-control-messages = { version = "0.1.0", path = "../entropy-control-messages" }
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json", "multipart"], default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["rt", "net", "time", "process", "macros", "fs"] }
