[package]
name = "replication-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
replication-control-messages = { version = "0.1.0", path = "../replication-control-messages" }
reqwest = { version = "0.11.23", default-features = false, features = ["json"] }
tokio = { version = "1.35.1", features = ["macros", "net", "time", "rt"] }
